# freqknowfit

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
freqknowfit/: aod_betabin.R  transfer.py
freqknowfit/nonparametric/: kde_deviance.py  nonparametric.py  overlay_transfer.py  transfer.py  transfer_curves.py  utils.py
freqknowfit/parametric/: compare_aics.py  oi_glm.R  oi_glmm_admb.R  oi_glmm_tmb.R  oi_vgam.R  plot_theta_inflate.py  pytorch_oneinf.py  regress.R  regress.py  rpscl_oneinf.py  statsmodels_glm.py
freqknowfit/parametric/tmb_oi/: reg.R  reg.cpp
workflow/: Snakefile
