[tool.poetry]
name = "freqknowfit"
version = "0.1.0"
description = "Fitting various linear-ish and non-parameteric models for vocabulary inventory data"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-v2"

[tool.poetry.dependencies]
python = "^3.8"
snakemake = "^6.5.1"
click = "^8.0.1"
pandas = "^1.2.5"
pyarrow = "^4.0.1"
duckdb = "^0.2.7"
datashader = "^0.13.0"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
